Adiciona página de gerenciamento de produtos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "lib": ["ES2020"],
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "rootDir": ".",
     "outDir": "dist",
-    "forceConsistentCasingInFileNames": true
+    "rootDir": ".",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "types": ["node"]
   },
-  "include": [
-    "server.ts",
-    "seed.ts",
-    "prisma/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
