--- a/package.json
+++ b/package.json
@@ -2,32 +2,40 @@
   "name": "fotoload-api",
   "version": "1.0.0",
   "main": "dist/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "tsx server.ts",
+    "dev": "nodemon server.ts",
+    "start": "node dist/server.js",
     "build": "tsc",
-    "generate": "prisma generate",
-    "prepare": "npm run generate && npm run build",
-    "start": "node dist/server.js"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.5.0",
-    "axios": "^1.6.7",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^2.0.1"
+    "seed": "ts-node seed.ts",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^29.5.5",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.0.15",
-    "prisma": "^5.5.0",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.0",
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
-  "prisma": {
-    "seed": "ts-node ./seed.ts"
+  "dependencies": {
+    "@prisma/client": "^5.11.0",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
+  },
+  "compilerOptions": {
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   }
 }
