--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.ts",
+    "dev": "nodemon --exec tsx server.ts",
     "start": "node dist/server.js",
     "build": "tsc",
     "seed": "ts-node seed.ts",
@@ -25,13 +25,15 @@
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
   },
   "compilerOptions": {
     "typeRoots": [
