--- a/package.json
+++ b/package.json
@@ -29,15 +29,20 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.22.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "prisma": "^6.13.0"
   },
   "compilerOptions": {
     "typeRoots": [
       "./node_modules/@types"
     ]
-  }
+  },
+  "description": "Marketplace de Dados & Fotos de Produtos",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
