--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.5",
     "@types/multer": "^2.0.0",
+    "@types/node": "^24.2.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
