--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "compilerOptions": {
     "typeRoots": [
       "./node_modules/@types"
+    ],
+    "types": [
+      "node"
     ]
   },
   "description": "Marketplace de Dados & Fotos de Produtos",
